# origin

./: .gitignore
Итоговое задание/ConsoleApplication1/: ConsoleApplication1.sln
Итоговое задание/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
Итоговое задание/RaceLib/: RaceLib.sln
Итоговое задание/RaceLib/RaceConsole/: ConsoleInterface.cpp  ConsoleInterface.h  RaceConsole.vcxproj  RaceConsole.vcxproj.filters  VehicleFactory.h  main.cpp
Итоговое задание/RaceLib/RaceLib/: AirVehicle.cpp  AirVehicle.h  Boots.cpp  Boots.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  GroundVehicle.cpp  GroundVehicle.h  MagicCarpet.cpp  MagicCarpet.h  Race.cpp  Race.h  RaceCore.h  RaceCoreExport.h  RaceLib.vcxproj  RaceLib.vcxproj.filters  RaceType.h  Vehicle.cpp  Vehicle.h
Продвинутое программирование/Урок 1/Задание 1/: Задание 1.sln
Реплик/Заданиеееее1/: Заданиеееее1.sln
Реплик/Заданиеееее1/Заданиеееее1/: Заданиеееее1.cpp  Заданиеееее1.vcxproj  Заданиеееее1.vcxproj.filters
Урок 10/Задание 1/Greeter/: Greeter.sln
Урок 4/Задание 1/: Задание 1.sln
Урок 7/Задание 2/Задание 2/Задание 2/: CMakeLists.txt  equilateral_triangle.cpp  figure.cpp  figure.h  figure_error.cpp  figure_error.h  isosceles_triangle.cpp  isosceles_triangle.h  main.cpp  parallelogram.cpp  quadrangle.cpp  quadrangle.h  rectangle.cpp  rhombus.cpp  right_triangle.cpp  square.cpp  triangle.cpp  triangle.h  Задание 2.vcxproj  Задание 2.vcxproj.filters
Урок 9/Задание 1/: CMakeLists.txt  Source.cpp
(+142 files in other folders)
