cmake_minimum_required(VERSION 3.22.0)
project(my_second_cmake_project)
add_executable(my_second_cmake_program 
main.cpp 
equilateral_triangle.cpp 
equilateral_triangle.h 
figure.cpp figure.h 
figure_error.cpp 
figure_error.h 
isosceles_triangle.cpp 
isosceles_triangle.h 
parallelogram.cpp 
parallelogram.h 
quadrangle.cpp 
quadrangle.h 
rectangle.cpp 
rectangle.h 
rhombus.cpp
rhombus.h 
right_triangle.cpp 
right_triangle.h 
square.cpp 
square.h 
triangle.cpp 
triangle.h)
